2008-07-21  Ivan N. Zlatev  <contact@i-nz.net>

	* Integrate Mono.Design for building with Visual Studio.

2008-07-18  Ivan N. Zlatev  <contact@i-nz.net>

	* UI/PropertyGrid.cs, UI/MainView.cs: Clear the propertygrid.

2008-06-18  Ivan N. Zlatev  <contact@i-nz.net>

	* UI/PropertyGrid.cs: Handle removing of the root component.

2008-03-11  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignTime/CodeProviderDesignerLoader.cs: Guard against a NRE in 
	ReportErrors if the error collection is null. 

2008-03-02  Ivan N. Zlatev  <contact@i-nz.net>

	* Enable Undo, Redo, Cut, Copy, Paste, Delete as I've already implmented
	those in System.Design.
	* Much better code for the PropertyGrid
	* Makefile: Fixes and improvements.
	* Program.cs: Fix spacing.
	* DesignTime/CodeProviderDesignerLoader.cs: Report errors only if 
	we weren't successful.
	* DesignTime/UndoRedoEngine.cs: Fix multi undo/redo operations.

2008-01-07  Ivan N. Zlatev <contact@i-nz.net>

	* UI/ToolBoxList/ToolBoxList.cs: 
	 - Drop Docking of the categories for using custom layouting in order
	 to show the categories in the order they were added.
	 - Implement RemoveToolboxItem.
	 - Drop NotImplementedExceptions in order to make it work on MSNET.
	* DesignTime/ToolboxFiller.cs, Project/Workspace.cs, UI/MainView.cs:
	 Move the Toolbox filling code out of the Workspace and create a 
	 Mediator(?) between References and Toolbox.
	* Project/References.cs: Provide add/remove notication.
	* DesignTime/CodeProvider.cs, DesignTime/CodeProviderDesignerLoader.cs:
	 NRefactory doesn't recognize between field and property reference, so
	 we need to tell it in oder to get proper CodeExpressions generated.
	* UndoRedoEngine.cs: Implemented.
	* deps/ICSharpCode.NRefactory.dll: Update to 2.2.1.
	* Makefile: fixes for building without Mono.Design.

2007-10-24  Ivan N. Zlatev <contact@i-nz.net>

	* Program.cs: More exception handling.
	* UI/NewFileDialog.cs: Usability improvements.

2007-09-26  Ivan N. Zlatev <contact@i-nz.net>
